--- a/package.json
+++ b/package.json
@@ -9,11 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "recharts": "^3.6.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "@google/genai": "1.3.0",
-    "recharts": "2.15.0",
-    "@supabase/supabase-js": "2.45.1"
+    "@supabase/supabase-js": "^2.90.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
